# arduinoX86

./: .gitignore  Cargo.toml  README.md
asm/: 386_mandebrot.asm  program.asm  program.lst  program_disable_386ex_waits.asm  program_fpu.asm  program_jump286.asm  program_mandelbrot.asm  program_regs.asm  program_regs_286.asm  program_regs_386.asm  starpath.asm
asm/386/: program_386_dr7_undoc_bit.asm
asm/387/: fpu_add.asm  fpu_add_1_plus_2.asm  fpu_probe.asm  fputest.asm
asm/demos/: fasterTL.asm  plasma.asm  plasmosis.asm  starpath.asm
asm/includes/: ArduinoX86.inc
asm/vcf2025/: dragonfade_256.asm  tiny_bounce.asm
cfg/: arduinox86_gui.toml  gen_286.toml  gen_386.toml
crates/ard808x_client/: Cargo.toml
crates/ard808x_client/src/: lib.rs  registers.rs
crates/ard808x_cpu/: Cargo.toml
crates/ard808x_cpu/examples/: cpu_id.rs
crates/ard808x_cpu/src/: lib.rs  registers.rs  remote_program.rs
crates/ard808x_cpu/tests/: aaa.rs  aas.rs  daa.rs  das.rs  flags.rs
crates/arduinoX86_client/: Cargo.toml
crates/arduinoX86_client/src/: lib.rs  registers.rs
crates/arduinox86_client/: Cargo.toml
crates/arduinox86_client/src/: cycle_state.rs  lib.rs  register_printer.rs  registers.rs
crates/arduinox86_cpu/: Cargo.toml
crates/arduinox86_cpu/src/: code_stream.rs  lib.rs  queue.rs
crates/arduinox86_cpu/tests/: aaa.rs  aas.rs  daa.rs  das.rs  flags.rs
crates/arduinox86_egui/: Cargo.toml  LICENSE
crates/arduinox86_egui/src/: app.rs  assembler.rs  async_exec.rs  client.rs  config.rs  enums.rs  events.rs  file_dialogs.rs  lib.rs  main.rs  register_state.rs  resource_manager.rs  scheduler.rs  serial_manager.rs  structs.rs  style.rs  thread_event.rs  window_manager.rs
crates/arduinox86_egui/src/controls/: canvas.rs  cycle_table.rs  data_table.rs  data_visualizer.rs  mod.rs  registers_v3.rs  tab_group.rs
crates/arduinox86_egui/src/range_check/: mod.rs
crates/arduinox86_egui/src/widgets/: cycle_display.rs  mod.rs  mount_address_widget.rs
crates/arduinox86_egui/src/windows/: binary_view.rs  client_window.rs  code_editor.rs  memory_viewer.rs  mod.rs  register_window.rs
crates/exec_program/: Cargo.toml
crates/exec_program/src/: main.rs
crates/moo/: Cargo.toml
crates/moo/src/: lib.rs  prelude.rs
crates/test_generator/: Cargo.toml
crates/test_generator/src/: bus_ops.rs  cpu_common.rs  cycles.rs  display.rs  flags.rs  gen_opcode.rs  gen_regs.rs  gen_tests.rs  instruction.rs  main.rs  modrm.rs  registers.rs  state.rs  validate_tests.rs
hats/286_5V/: README.md
hats/386EX/: README.md
hats/386EX/kicad/: arduino_386.kicad_pcb  arduino_386.kicad_prl  arduino_386.kicad_sch  sym-lib-table
hats/386EX_387SX/: README.md
hats/386EX_387SX/kicad/: 387sx.kicad_sym  arduino_386_387.kicad_pcb  arduino_386_387.kicad_prl  arduino_386_387.kicad_pro  arduino_386_387.kicad_sch
hats/486/kicad/: arduinox86_486_shield.kicad_pcb  arduinox86_486_shield.kicad_prl
hats/808x/: README.md
hats/808x/gerbers/: ard8088-B_Mask.gbs  ard8088-F_Cu.gtl  ard8088-F_Mask.gts  ard8088-NPTH.drl  ard8088-PTH-drl_map.gbr  ard8088-job.gbrjob
pcb/kicad/: .gitignore
platformio/ArduinoX86/: compile_commands.json  platformio.ini
platformio/ArduinoX86/asm/: cpu_id.asm  cpu_setup_386ex.asm  cpu_setup_386ex.lst  loadall_386.asm  loadall_386.lst  store_nmi_386_real.asm
platformio/ArduinoX86/include/: Board.h  BoardController.h  BusController.h  BusEmulator.h  BusTypes.h  CommandServer.h  Cpu.h  CpuTypes.h  CycleStateLogger.h  DebugFilter.h  DebugPrint.h  Display.h  GigaDisplay.h  Hat.h  InlineProgram.h  InstructionQueue.h  Shield.h  StaticHashTable.h  Vga.h  ansi_color.h  arduinoX86.h  config.h  exceptions.h  globals.h  gpio_pins.h  hat_config.h  i82288Emulator.h  i8288Emulator.h  interrupts.h  programs.h  registers.h  serial_config.h
platformio/ArduinoX86/src/: BoardController.h  CommandServer.cpp  Cpu.cpp  DebugFilter.h  DebugPrint.cpp  DebugPrint.h  GigaDisplay.h  Hat80286.cpp  Hat80386.cpp  Hat8088.cpp  Vga.cpp  ansi_color.h  arduinoX86.h  bus.cpp  buzzer.cpp  config.h  cpu.cpp  cpu_server.h  globals.cpp  globals.h  gpio_pins.h  hat_config.h  i8288.cpp  interrupts.cpp  main.cpp  opcodes.cpp  opcodes.h  programs.cpp  queue.cpp  rgb565.h  src.ino  strings.cpp  util.c
scripts/: build.bat  build2.bat  build_286.bat  build_386.bat
shields/286_5V/: README.md
shields/286_5V/kicad/: 80286.kicad_sym  arduino_286_5V.kicad_pcb  arduino_286_5V.kicad_prl  arduino_286_5V.kicad_pro  arduino_286_5V.kicad_sch  sym-lib-table
shields/386EX/: README.md
shields/386EX/kicad/: arduino_386.kicad_pcb  arduino_386.kicad_prl  arduino_386.kicad_pro  arduino_386.kicad_sch
shields/386EX_387SX/: README.md
shields/386EX_387SX/kicad/: arduino_386_387.kicad_pcb  arduino_386_387.kicad_prl  arduino_386_387.kicad_pro  arduino_386_387.kicad_sch  sym-lib-table
shields/386EX_V4/: README.md
shields/386EX_V4/kicad/: arduino_386EX_V4.kicad_pcb  arduino_386EX_V4.kicad_prl  arduino_386EX_V4.kicad_pro  arduino_386EX_V4.kicad_sch  sym-lib-table
shields/387SX_V2/: README.md
shields/387SX_V2/kicad/: 387sx.kicad_sym  arduino_387SX_V2.kicad_pcb  arduino_387SX_V2.kicad_prl  arduino_387SX_V2.kicad_pro  arduino_387SX_V2.kicad_sch
shields/486/kicad/: arduinox86_486_shield.kicad_pro  arduinox86_486_shield.kicad_sch  sym-lib-table
shields/80186/: README.md
shields/80186/kicad/: .gitignore  arduino_80186.kicad_pcb  arduino_80186.kicad_prl  arduino_80186.kicad_pro  arduino_80186.kicad_sch  sym-lib-table
shields/808X_V3/: README.md
shields/808X_V3/kicad/: ard8088.kicad_prl
shields/808x/: README.md
shields/808x/gerbers/: ard8088-B_Cu.gbl  ard8088-B_Paste.gbp  ard8088-B_Silkscreen.gbo  ard8088-Edge_Cuts.gm1  ard8088-F_Paste.gtp  ard8088-F_Silkscreen.gto  ard8088-NPTH-drl_map.gbr  ard8088-PTH.drl
shields/808x/kicad/: arduino_808x_v3.kicad_pcb  arduino_808x_v3.kicad_prl  (+2 more)
sketches/cpu_server/: BoardController.h  DebugFilter.h  DebugPrint.h  ansi_color.h  arduinoX86.h  bus.ino  cpu.ino  cpu_server.h  cpu_server.ino  gpio_pins.h  hat_config.h  i8288.ino  piq.ino
syntax/: Nasm Assembly.sublime-syntax
(+64 files in other folders)
