[workspace]
members = [
    "crates/arduinox86_client",
    "crates/ard808x_cpu",
    "crates/exec_program",
    "crates/test_generator",
]
resolver = "2"
default-members = ["crates/exec_program"]

[workspace.package]
version = "0.3.0"
edition = "2021"
authors = ["Daniel Balsom", "Andreas Jonsson"]
license = "MIT"
repository = "https://github.com/dbalsom/arduino_808x"

[workspace.dependencies]
clap = { version = "4.0", features = ["derive"] }
env_logger = "0.11"
log = "0.4"
serialport = "4.7.2"
modular-bitfield = "0.11"
binrw = "0.15"
serde = { version = "1.0", features = ["derive"] }
toml = { version = "0.8" }
anyhow = "1.0"
thiserror = "2.0"
rand = "0.9"
rand_distr = "0.5"
indexmap = "2.2"
[workspace.dependencies.iced-x86]
version = "1.21"
default-features = false
# See below for all features
features = ["std", "encoder", "decoder", "nasm", "instr_info", "serde"]

#serialport = { git = "https://github.com/dbalsom/serialport-rs", branch = "arduino-fix" }
