[package]
name = "test_generator"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
log.workspace = true
env_logger.workspace = true
clap = { workspace = true, features = ["derive"] }
toml = { workspace = true }
anyhow.workspace = true
serde = { workspace = true, features = ["derive"] }
rand.workspace = true
rand_distr.workspace = true
iced-x86.workspace = true
indexmap.workspace = true
arduinox86_client = { path = "../arduinox86_client", features = ["use_moo", "use_iced"] }
moo-rs.workspace = true
strum.workspace = true
strum_macros.workspace = true